fix #81: [app:color-gradient] scrollbar not shown

--- a/src/pages/color-gradient/_styles.module.scss
+++ b/src/pages/color-gradient/_styles.module.scss
@@ -38,7 +38,7 @@
 		height: min-content;
 	}
 
-	> div {
+	> div > div {
 		padding: 12px;
 		border-radius: 8px;
 		background-color: rgb(var(--g-color-surface));
